--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.cl-card.cl-signIn-start,
+.cl-card.cl-signUp-start {
+  box-shadow: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
