--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+.cl-userButtonTrigger {
+  @apply hover:opacity-80;
+}
+
 .cl-card.cl-signIn-start,
 .cl-card.cl-signUp-start {
   @apply shadow-none;
+}
+
+.cl-dividerText {
+  @apply dark:text-secondary;
+}
+
+.cl-dividerLine,
+.cl-navbarButton.cl-active {
+  @apply dark:bg-secondary;
+}
+
+.cl-userButtonPopoverCard {
+  @apply dark:border-secondary;
+}
+
+.cl-navbarButton {
+  @apply dark:hover:bg-secondary;
 }
 
 .my-profile .cl-userProfile-root {
   @apply w-full;
 }
 
-.my-profile .cl-userProfile-root .cl-card {
-  @apply rounded-lg shadow w-full max-w-full;
-}
-
-.cl-profileSectionContent button {
-  @apply focus:shadow-none focus:ring-2 ring-zinc-900/50 dark:text-foreground dark:hover:bg-secondary;
-}
-
 .cl-navbar {
   @apply border-r border-secondary;
 }
 
-.cl-navbarButton.cl-active {
-  @apply dark:bg-secondary;
-}
-
-.cl-navbarButton {
+.cl-userButtonPopoverActionButton {
   @apply dark:hover:bg-secondary;
 }
 
@@ -35,64 +44,32 @@
   @apply dark:text-secondary-foreground;
 }
 
-.cl-profileSectionContent p {
-  @apply dark:text-foreground;
-}
-
-.cl-formFieldLabel {
-  @apply dark:text-foreground;
-}
-
-.cl-form p {
-  @apply dark:text-foreground;
-}
-
-.cl-formButtonPrimary {
-  @apply dark:disabled:bg-secondary-foreground dark:disabled:text-primary-foreground dark:bg-secondary dark:hover:bg-slate-700 dark:text-secondary-foreground;
-}
-
-.cl-page p {
-  @apply dark:text-foreground;
-}
-
-.cl-breadcrumbsItemBox a {
-  @apply dark:text-foreground;
-}
-
-.cl-avatarImageActionsUpload {
-  @apply dark:text-foreground;
-}
-
-.cl-userPreviewTextContainer p {
-  @apply dark:text-foreground;
-}
-
+.cl-page p,
+.cl-form p,
+.cl-formFieldLabel,
+.cl-breadcrumbsItemBox a,
+.cl-profileSectionContent p,
+.cl-avatarImageActionsUpload,
+.cl-userPreviewTextContainer p,
+.cl-userButtonPopoverActionButton svg,
 .cl-userButtonPopoverActionButton span {
   @apply dark:text-foreground;
 }
 
-.cl-userButtonPopoverActionButton svg {
-  @apply dark:text-foreground;
-}
-
-.cl-userButtonPopoverActionButton {
-  @apply dark:hover:bg-secondary;
-}
-
-.cl-userButtonPopoverCard {
-  @apply dark:border-secondary;
+.my-profile .cl-userProfile-root .cl-card {
+  @apply rounded-lg shadow w-full max-w-full;
 }
 
 .cl-socialButtonsBlockButton {
   @apply dark:hover:bg-secondary dark:text-foreground dark:border-secondary;
 }
 
-.cl-dividerLine {
-  @apply dark:bg-secondary;
+.cl-profileSectionContent button {
+  @apply focus:shadow-none focus:ring-2 ring-zinc-900/50 dark:text-foreground dark:hover:bg-secondary;
 }
 
-.cl-dividerText {
-  @apply dark:text-secondary;
+.cl-formButtonPrimary {
+  @apply dark:disabled:bg-secondary-foreground dark:disabled:text-primary-foreground dark:bg-secondary dark:hover:bg-slate-700 dark:text-secondary-foreground;
 }
 
 @layer base {
